// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverviewCard component accpets onClick 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`OverviewCard component removes clickable class when the area is none 1`] = `
<div>
  <div
    class="OverviewCard-root-256"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-262 Media-root-271"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-263"
    >
      <div
        class="OverviewCard-brandLogo-260 OverviewCard-negative-261"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-264 Typography-root-273 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-267 OverviewCard-text-266"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-269"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-281 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-284"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverviewCard component renders as a flat card 1`] = `
<div>
  <div
    class="OverviewCard-root-166 OverviewCard-flat-168"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-172 Media-root-181"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-173"
    >
      <div
        class="OverviewCard-brandLogo-170 OverviewCard-negative-171"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-174 Typography-root-183 MuiTypography-h4"
        data-testid="typography"
      >
        <button
          class="MuiButtonBase-root OverviewCard-clickableArea-180"
          tabindex="0"
          type="button"
        >
          Heading
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </h4>
      <div
        class="OverviewCard-children-177 OverviewCard-text-176"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-179"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-191 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-194"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverviewCard component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-1 OverviewCard-clickable-4"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-7 Media-root-16"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-8"
    >
      <div
        class="OverviewCard-brandLogo-5 OverviewCard-negative-6"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-9 Typography-root-18 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-12 OverviewCard-text-11"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-14"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-26 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-29"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if clickableArea === body 1`] = `
<div>
  <div
    class="OverviewCard-root-301 OverviewCard-clickable-304"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-307 Media-root-316"
      src="path-to-image"
    />
    <button
      class="MuiButtonBase-root OverviewCard-body-308"
      tabindex="0"
      type="button"
    >
      <div
        class="OverviewCard-brandLogo-305 OverviewCard-negative-306"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-309 Typography-root-318 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-312 OverviewCard-text-311"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-314"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-326 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-329"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`OverviewCard component renders correctly if hasChildrenWithoutMargin  === true 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-391 OverviewCard-clickable-394"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-397 Media-root-406"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-398"
    >
      <div
        class="OverviewCard-brandLogo-395 OverviewCard-negative-396"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-399 Typography-root-408 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-402 OverviewCard-text-401 OverviewCard-withoutMargin-403"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-404"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-416 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-419"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if imageSize === contain 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-436 OverviewCard-clickable-439"
    imagesource="imageSource"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-442 Media-root-451 Media-contain-452"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-443"
    >
      <div
        class="OverviewCard-brandLogo-440 OverviewCard-negative-441"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-444 Typography-root-453 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-447 OverviewCard-text-446"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-449"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-461 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-464"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if moreOptionsAvailable === true 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-346 OverviewCard-clickable-349"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-352 Media-root-361"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-353"
    >
      <div
        class="OverviewCard-brandLogo-350 OverviewCard-negative-351"
      >
        <svg
          preserveAspectRatio="xMinYMin"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-354 Typography-root-363 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <h5
        class="MuiTypography-root OverviewCard-text-356 Typography-root-363 MuiTypography-h5"
        data-testid="typography"
      />
      <div
        class="OverviewCard-children-357 OverviewCard-text-356"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-359"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-371 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-374"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly with a subtitle 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-116 OverviewCard-clickable-119"
    tabindex="0"
    type="button"
  >
    <div
      class="OverviewCard-body-123"
    >
      <h4
        class="MuiTypography-root OverviewCard-title-124 OverviewCard-noBrandLogo-125 Typography-root-133 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <h5
        class="MuiTypography-root OverviewCard-text-126 Typography-root-133 MuiTypography-h5"
        data-testid="typography"
      >
        Subtitle
      </h5>
      <div
        class="OverviewCard-children-127 OverviewCard-text-126"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly with contain image 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-141 OverviewCard-clickable-144"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="OverviewCard-headerPicture-147 Media-root-156 Media-contain-157"
      src="path-to-image"
    />
    <div
      class="OverviewCard-body-148"
    >
      <h4
        class="MuiTypography-root OverviewCard-title-149 OverviewCard-noBrandLogo-150 Typography-root-158 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-152 OverviewCard-text-151"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly without optional props 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-91 OverviewCard-clickable-94"
    tabindex="0"
    type="button"
  >
    <div
      class="OverviewCard-body-98"
    >
      <h4
        class="MuiTypography-root OverviewCard-title-99 OverviewCard-noBrandLogo-100 Typography-root-108 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-102 OverviewCard-text-101"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders with a string brandImageSource prop 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard-root-46 OverviewCard-clickable-49"
    tabindex="0"
    type="button"
  >
    <div
      class="OverviewCard-body-53"
    >
      <div
        class="OverviewCard-brandLogo-50"
      >
        <img
          alt=""
          src="image/source.jpg"
        />
      </div>
      <h4
        class="MuiTypography-root OverviewCard-title-54 Typography-root-63 MuiTypography-h4"
        data-testid="typography"
      >
        Heading
      </h4>
      <div
        class="OverviewCard-children-57 OverviewCard-text-56"
      >
        We do the things
      </div>
      <div
        class="OverviewCard-footer-59"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-71 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-74"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
